--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.9"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^9.22.2"
+	}
 }
