--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.20.5",
+    "@sveltejs/kit": "^1.22.1",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.1.6",
-    "eslint": "^8.43.0",
+    "daisyui": "^3.1.11",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte": "^2.31.1",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
+    "eslint-plugin-svelte": "^2.32.2",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.0",
+    "svelte": "^4.0.5",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
+    "vite": "^4.4.2"
   },
   "type": "module",
   "dependencies": {
-    "@auth/core": "^0.8.4",
+    "@auth/core": "^0.9.0",
     "@auth/sveltekit": "^0.3.3",
     "@onflow/fcl": "^1.4.1",
-    "firebase": "^9.23.0",
+    "firebase": "^10.0.0",
+    "nanoid": "^4.0.2",
     "ramda": "^0.29.0"
   }
 }
