--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-vercel": "^3.0.2",
     "@sveltejs/kit": "^1.22.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.1.11",
